@@ -1,17 +1,12 @@
 package com.like.hrm.duty.boundary;
 
-import java.io.Serializable;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.util.StringUtils;
 
-import com.fasterxml.jackson.annotation.JsonAutoDetect;
-import com.fasterxml.jackson.annotation.JsonAutoDetect.Visibility;
-import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.like.hrm.duty.domain.model.DutyApplication;
 import com.like.hrm.duty.domain.model.QDutyApplication;
@@ -22,27 +17,15 @@ import com.like.system.holiday.service.DateInfoService;
 import com.querydsl.core.BooleanBuilder;
 import com.querydsl.core.types.dsl.BooleanExpression;
 
-import lombok.AccessLevel;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
-import lombok.ToString;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 public class DutyApplicationDTO {
 
-	@Builder
-	public static class SearchDutyApplication implements Serializable {
-		
-		private static final long serialVersionUID = 6850895780318962483L;
-		
-		private final QDutyApplication qDutyApplication = QDutyApplication.dutyApplication;
-		
-		String staffId;
+	public record Search(
+			String staffId
+			) {
+		private static QDutyApplication qDutyApplication = QDutyApplication.dutyApplication;
 		
 		public BooleanBuilder getBooleanBuilder() {
 			BooleanBuilder builder = new BooleanBuilder();
@@ -58,8 +41,7 @@ public class DutyApplicationDTO {
 						
 			return qDutyApplication.staffId.eq(staffId);
 		}
-		
-	}
+	}	
 		
 	public record SaveDutyApplication(
 			Long dutyId,
@@ -102,11 +84,11 @@ public class DutyApplicationDTO {
 							   ,dutyReason
 							   ,new LocalDatePeriod(fromDate, toDate)
 							   ,this.getSelectedDate()
-							   ,new BigDecimal("8"));		
+							   ,dutyTime);		
 		}			
 		
 		private List<LocalDate> getSelectedDate() {
-			return selectedDate.stream().map(e -> e.getDate()).collect(Collectors.toList());
+			return selectedDate.stream().map(e -> e.date()).toList();
 		}
 		
 		private static List<DutyDate> convertDutyDate(DutyApplication entity, DateInfoList dateInfoList) {
@@ -115,33 +97,21 @@ public class DutyApplicationDTO {
 			
 			for (DateInfo date : dateInfoList.getDates()) {							
 				dutyDatelist.add(new DutyDate(date.getDate()										
-											 ,selectedDate.contains(date.getDate())
+											 ,selectedDate.contains(date.getDate())											 
 											 ,date.isHoliday()));
 			}
 			
 			log.info(dutyDatelist.toString());
 			
-			return dutyDatelist;			
+			return dutyDatelist;
 		}
 	}		
 	
-	@JsonAutoDetect(isGetterVisibility = Visibility.ANY)	
-	@ToString(includeFieldNames = true)
-	@Getter
-	@Setter
-	@NoArgsConstructor
-	@AllArgsConstructor
-	public static class DutyDate implements Serializable {
-				
-		private static final long serialVersionUID = 5742215979107207193L;
-
-		LocalDate date;
-		
-		@JsonProperty(value = "isSelected")
-		boolean isSelected;
-		
-		@JsonProperty(value = "isHoliday")
-		boolean isHoliday;
+	public record DutyDate(
+			LocalDate date,
+			@JsonProperty("isSelected")boolean isSelected,
+			@JsonProperty("isHoliday")boolean isHoliday
+			) {
 		
 		public static List<DutyDate> convertDutyDate(DateInfoList dateInfoList) {
 			List<DutyDate> dutyDatelist = new ArrayList<>(dateInfoList.size());
@@ -155,4 +125,5 @@ public class DutyApplicationDTO {
 			return dutyDatelist;
 		}
 	}
+	
 }
