@@ -2,11 +2,10 @@ package com.like.hrm.duty.infra;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Repository;
 
-import com.like.hrm.duty.boundary.DutyApplicationDTO.SearchDutyApplication;
+import com.like.hrm.duty.boundary.DutyApplicationDTO;
 import com.like.hrm.duty.domain.model.DutyApplication;
 import com.like.hrm.duty.domain.model.QDutyApplication;
 import com.like.hrm.duty.domain.repository.DutyApplicationQueryRepository;
@@ -23,7 +22,7 @@ public class DutyApplicationQueryJpaRepository implements DutyApplicationQueryRe
 	}
 	
 	@Override
-	public List<DutyApplication> getDutyApplicationList(SearchDutyApplication condition) {
+	public List<DutyApplication> getDutyApplicationList(DutyApplicationDTO.Search condition) {
 		return queryFactory
 				.selectFrom(QDutyApplication.dutyApplication)
 				.where(condition.getBooleanBuilder())
@@ -31,15 +30,15 @@ public class DutyApplicationQueryJpaRepository implements DutyApplicationQueryRe
 	}
 
 	@Override
-	public long getDutyApplicationCount(String employeeId, List<DutyCode> dutyCodeList, LocalDate fromDate,
+	public long getDutyApplicationCount(String staffId, List<DutyCode> dutyCodeList, LocalDate fromDate,
 			LocalDate toDate) {
 		
 		QDutyApplication qDutyApplication = QDutyApplication.dutyApplication;							
-		List<String> dutyCodes = dutyCodeList.stream().map(e -> e.getDutyCode()).collect(Collectors.toList());
+		List<String> dutyCodes = dutyCodeList.stream().map(e -> e.getDutyCode()).toList();
 				
 		return queryFactory
 				.selectFrom(QDutyApplication.dutyApplication)
-				.where(qDutyApplication.staffId.eq(employeeId)
+				.where(qDutyApplication.staffId.eq(staffId)
 				  .and(qDutyApplication.dutyCode.in(dutyCodes)))
 				.fetch()
 				.size();				
